# stress-testing-imogen

./: README.md  benchmark_runner.py  config.yaml  data_generator.py  gpu_monitor.py  main.py  model_loader.py  pyproject.toml  requirements.txt  results_analyzer.py  run_benchmark.ipynb
benchmark/: benchmark.py  plots.py  utils.py
notebooks/: run_benchmark.ipynb
scripts/: generate_id_cards.py
